[gd_scene load_steps=5 format=1]

[ext_resource path="res://scripts/GameOver.gd" type="Script" id=1]
[ext_resource path="res://resources/sprites/gui/black.png" type="Texture" id=2]
[ext_resource path="res://resources/pkm20Gold.fnt" type="BitmapFont" id=3]

[sub_resource type="Animation" id=1]

resource/name = "fade_in"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 1, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[node name="Node2D" type="Node2D"]

script/script = ExtResource( 1 )

[node name="BackGround" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="ToMenu" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 12.0
margin/bottom = 40.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "QUIT YOU SCRUB"
flat = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade_in = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "fade_in"

[connection signal="pressed" from="ToMenu" to="." method="_on_ToMenu_pressed"]


